--- a/projects/ngx-load-with/package.json
+++ b/projects/ngx-load-with/package.json
@@ -2,8 +2,9 @@
   "name": "ngx-load-with",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^15.2.0",
-    "@angular/core": "^15.2.0"
+    "@angular/common": ">=15.2.0",
+    "@angular/core": ">=15.2.0",
+    "rxjs": ">=7.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
