--- a/projects/ngx-load-with/package.json
+++ b/projects/ngx-load-with/package.json
@@ -9,5 +9,9 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rensjaspers/ngx-load-with"
+  },
   "sideEffects": false
 }
