--- a/projects/ngx-load-with/package.json
+++ b/projects/ngx-load-with/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-load-with",
-  "version": "1.2.0-beta.0",
+  "version": "1.2.0",
   "peerDependencies": {
     "@angular/common": ">=15.2.0",
     "@angular/core": ">=15.2.0",
