--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ngx-load-with",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "semantic-release": "semantic-release"
   },
   "private": true,
   "dependencies": {
@@ -34,6 +35,11 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "ng-packagr": "^16.1.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "semantic-release": "^21.0.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rensjaspers/ngx-load-with.git"
   }
 }
