--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: "lts/*"
           cache: "npm"
       - run: npm install
       - run: npm test -- --watch=false --code-coverage --browsers=ChromeHeadless
@@ -37,7 +37,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: "lts/*"
           registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
