--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^16.1.0",
-    "typescript": "~4.9.4",
-    "semantic-release": "^23.0.0"
+    "prettier": "^3.2.4",
+    "semantic-release": "^23.0.0",
+    "typescript": "~4.9.4"
   },
   "repository": {
     "type": "git",
