--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/router": "^17.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
-    "zone.js": "~0.14.3"
+    "zone.js": "^0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.2",
