--- a/.releaserc
+++ b/.releaserc
@@ -4,15 +4,7 @@
   ],
   "plugins": [
     [
-      "@semantic-release/commit-analyzer",
-      {
-        "releaseRules": [
-          {
-            "type": "docs",
-            "release": "patch"
-          }
-        ]
-      }
+      "@semantic-release/commit-analyzer"
     ],
     "@semantic-release/release-notes-generator",
     [
