--- a/.releaserc
+++ b/.releaserc
@@ -3,9 +3,7 @@
     "main"
   ],
   "plugins": [
-    [
-      "@semantic-release/commit-analyzer"
-    ],
+    "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     [
       "@semantic-release/npm",
