--- a/projects/ngx-load-with/package.json
+++ b/projects/ngx-load-with/package.json
@@ -13,5 +13,6 @@
     "type": "git",
     "url": "https://github.com/rensjaspers/ngx-load-with"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "license": "MIT"
 }
